feat: 권한 설정 및 CRUD 통일